first test with jest

--- a/src/test/bla.html
+++ b/src/test/bla.html
@@ -8,7 +8,7 @@
     import transform from '../index.js'
 
     const data = { name: 'underworld' }
-    const templateRenderer = transform('Hello {{name}}!');
+    const templateRenderer = transform('Hello {{name}}!')
 
     render(templateRenderer(data), document.body)
   </script>
