[#4] save one measurement in json

--- a/performance/run/lit-transformer.html
+++ b/performance/run/lit-transformer.html
@@ -10,9 +10,9 @@
     <div id="app"></div>
 
     <script type="module">
-      import { html, render } from '../node_modules/lit-html/lit-html.js';
-      import {unsafeHTML} from '../node_modules/lit-html/directives/unsafe-html.js'
-      import createTransformer from '../src/full-configured-lit-transformer.js';
+      import { html, render } from '../../node_modules/lit-html/lit-html.js';
+      import {unsafeHTML} from '../../node_modules/lit-html/directives/unsafe-html.js'
+      import createTransformer from '../../src/full-configured-lit-transformer.js';
 
       import { strTemplate } from './strTemplate.js';
       import { shortStory1, shortStory2 } from './templateData.js';
