--- a/performance/run/mustache.html
+++ b/performance/run/mustache.html
@@ -10,7 +10,7 @@
       <div id="app"></div>
   </body>
 
-  <script src="../node_modules/mustache/mustache.js"></script>
+  <script src="../../node_modules/mustache/mustache.js"></script>
   <script type="module">
     import { strTemplate } from './strTemplate.js';
     import { shortStory1, shortStory2 } from './templateData.js';
