[#4] use unpkg for github pages

--- a/performance/results/evaluation.html
+++ b/performance/results/evaluation.html
@@ -18,7 +18,7 @@
       }
     </style>
   
-    <script src="../../node_modules/chart.js/dist/Chart.bundle.min.js"></script>
+    <script src="https://unpkg.com/chart.js@2.8.0"></script>
   </head>
 
   <body>
