--- a/performance/example-of-performance-setup.html
+++ b/performance/example-of-performance-setup.html
@@ -12,8 +12,8 @@
 
   <script src="https://unpkg.com/mustache@3.0.1"></script>
   <script type="module">
-    import { strTemplate } from './strTemplate.js';
-    import { shortStory1, shortStory2 } from './templateData.js';
+    import { strTemplate } from './run/strTemplate.js';
+    import { shortStory1, shortStory2 } from './run/templateData.js';
 
     const renderTarget = document.getElementById('app');
 
