rename lit-vs-mustache -> diff-lit-mustache-demo

--- a/diff-lit-mustache-demo/diff-lit-mustache-demo.html
+++ b/diff-lit-mustache-demo/diff-lit-mustache-demo.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="shortcut icon" href="#">
-    <title>lit-vs-mustache</title>
+    <title>diff-lit-mustache-demo</title>
 
     <style>
       .container {
