disable animation from charts

--- a/performance/results/evaluation.html
+++ b/performance/results/evaluation.html
@@ -79,6 +79,7 @@
           },
           options: {
             title: { display: true, text: metricName },
+            animation: false,
             scales: {
               yAxes: [{ scaleLabel: { display: true, labelString: 'time / ms' } }],
             },
